force-app/main/default/objects/Payment_transaction__c/Payment_transaction__c.object-meta.xml
<CustomObject>
    <label>Payment transaction</label>
    <nameField>
        <label>Payment transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>payment transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>