force-app/main/default/objects/Payment_transaction__c/fields/auth_ref_num__c.field-meta.xml
<CustomField>
    <fullName>auth_ref_num__c</fullName>
    <label>Auth Ref Num</label>
    <length>40</length>
    <type>Text</type>
</CustomField>