force-app/main/default/objects/Payment_transaction__c/fields/bank_ref_no__c.field-meta.xml
<CustomField>
    <fullName>bank_ref_no__c</fullName>
    <label>Bank Reference No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>