force-app/main/default/objects/Payment_transaction__c/fields/billing_address__c.field-meta.xml
<CustomField>
    <fullName>billing_address__c</fullName>
    <label>Billing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>