force-app/main/default/objects/Payment_transaction__c/fields/billing_city__c.field-meta.xml
<CustomField>
    <fullName>billing_city__c</fullName>
    <label>Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>