force-app/main/default/objects/Payment_transaction__c/fields/billing_country__c.field-meta.xml
<CustomField>
    <fullName>billing_country__c</fullName>
    <label>Billing Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>