force-app/main/default/objects/Payment_transaction__c/fields/billing_email__c.field-meta.xml
<CustomField>
    <fullName>billing_email__c</fullName>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>