force-app/main/default/objects/Payment_transaction__c/fields/billing_name__c.field-meta.xml
<CustomField>
    <fullName>billing_name__c</fullName>
    <label>Billing Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>