force-app/main/default/objects/Payment_transaction__c/fields/billing_notes__c.field-meta.xml
<CustomField>
    <fullName>billing_notes__c</fullName>
    <label>Billing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>