force-app/main/default/objects/Payment_transaction__c/fields/billing_state__c.field-meta.xml
<CustomField>
    <fullName>billing_state__c</fullName>
    <label>Billing State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>