force-app/main/default/objects/Payment_transaction__c/fields/billing_tel__c.field-meta.xml
<CustomField>
    <fullName>billing_tel__c</fullName>
    <label>Billing Tel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>