force-app/main/default/objects/Payment_transaction__c/fields/billing_zip__c.field-meta.xml
<CustomField>
    <fullName>billing_zip__c</fullName>
    <label>Billing Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>