force-app/main/default/objects/Payment_transaction__c/fields/bin_country__c.field-meta.xml
<CustomField>
    <fullName>bin_country__c</fullName>
    <label>BIN Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>