force-app/main/default/objects/Payment_transaction__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>payment transactions</relationshipLabel>
    <relationshipName>payment_transactions</relationshipName>
    <type>Lookup</type>
</CustomField>