force-app/main/default/objects/Payment_transaction__c/fields/card_name__c.field-meta.xml
<CustomField>
    <fullName>card_name__c</fullName>
    <label>Card Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>