force-app/main/default/objects/Payment_transaction__c/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>