force-app/main/default/objects/Payment_transaction__c/fields/delivery_address__c.field-meta.xml
<CustomField>
    <fullName>delivery_address__c</fullName>
    <label>Delivery Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>