force-app/main/default/objects/Payment_transaction__c/fields/delivery_city__c.field-meta.xml
<CustomField>
    <fullName>delivery_city__c</fullName>
    <label>Delivery City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>