force-app/main/default/objects/Payment_transaction__c/fields/delivery_country__c.field-meta.xml
<CustomField>
    <fullName>delivery_country__c</fullName>
    <label>Delivery Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>