force-app/main/default/objects/Payment_transaction__c/fields/delivery_name__c.field-meta.xml
<CustomField>
    <fullName>delivery_name__c</fullName>
    <label>Delivery Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>