force-app/main/default/objects/Payment_transaction__c/fields/delivery_state__c.field-meta.xml
<CustomField>
    <fullName>delivery_state__c</fullName>
    <label>Delivery State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>