force-app/main/default/objects/Payment_transaction__c/fields/delivery_tel__c.field-meta.xml
<CustomField>
    <fullName>delivery_tel__c</fullName>
    <label>Delivery Tel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>