force-app/main/default/objects/Payment_transaction__c/fields/delivery_zip__c.field-meta.xml
<CustomField>
    <fullName>delivery_zip__c</fullName>
    <label>Delivery Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>