force-app/main/default/objects/Payment_transaction__c/fields/discount_value__c.field-meta.xml
<CustomField>
    <fullName>discount_value__c</fullName>
    <label>Discount Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>