force-app/main/default/objects/Payment_transaction__c/fields/eci_value__c.field-meta.xml
<CustomField>
    <fullName>eci_value__c</fullName>
    <label>ECI Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>