force-app/main/default/objects/Payment_transaction__c/fields/failure_message__c.field-meta.xml
<CustomField>
    <fullName>failure_message__c</fullName>
    <label>Failure Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>