force-app/main/default/objects/Payment_transaction__c/fields/inv_mer_reference_no__c.field-meta.xml
<CustomField>
    <fullName>inv_mer_reference_no__c</fullName>
    <label>Invoice Merchant Reference No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>