force-app/main/default/objects/Payment_transaction__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>