force-app/main/default/objects/Payment_transaction__c/fields/mer_amount__c.field-meta.xml
<CustomField>
    <fullName>mer_amount__c</fullName>
    <label>Merchant Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>