force-app/main/default/objects/Payment_transaction__c/fields/merchant_param1__c.field-meta.xml
<CustomField>
    <fullName>merchant_param1__c</fullName>
    <label>Merchant Param 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>