force-app/main/default/objects/Payment_transaction__c/fields/merchant_param2__c.field-meta.xml
<CustomField>
    <fullName>merchant_param2__c</fullName>
    <label>Merchant Param 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>