force-app/main/default/objects/Payment_transaction__c/fields/Merchant_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Reference_No__c</fullName>
    <label>Merchant Reference No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>