force-app/main/default/objects/Payment_transaction__c/fields/offer_code__c.field-meta.xml
<CustomField>
    <fullName>offer_code__c</fullName>
    <label>Offer Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>