force-app/main/default/objects/Payment_transaction__c/fields/offer_type__c.field-meta.xml
<CustomField>
    <fullName>offer_type__c</fullName>
    <label>Offer Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>