force-app/main/default/objects/Payment_transaction__c/fields/Order_Request__c.field-meta.xml
<CustomField>
    <fullName>Order_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Request</label>
    <referenceTo>Order_Request__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>