force-app/main/default/objects/Payment_transaction__c/fields/order_status__c.field-meta.xml
<CustomField>
    <fullName>order_status__c</fullName>
    <label>Order Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>