force-app/main/default/objects/Payment_transaction__c/fields/payment_mode__c.field-meta.xml
<CustomField>
    <fullName>payment_mode__c</fullName>
    <label>Payment Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>