force-app/main/default/objects/Payment_transaction__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <label>QR Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>