force-app/main/default/objects/Payment_transaction__c/fields/response_code__c.field-meta.xml
<CustomField>
    <fullName>response_code__c</fullName>
    <label>Response Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>