force-app/main/default/objects/Payment_transaction__c/fields/retry__c.field-meta.xml
<CustomField>
    <fullName>retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry</label>
    <type>Checkbox</type>
</CustomField>