force-app/main/default/objects/Payment_transaction__c/fields/status_code__c.field-meta.xml
<CustomField>
    <fullName>status_code__c</fullName>
    <label>Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>