force-app/main/default/objects/Payment_transaction__c/fields/status_message__c.field-meta.xml
<CustomField>
    <fullName>status_message__c</fullName>
    <label>Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>