force-app/main/default/objects/Payment_transaction__c/fields/Tiny_URL__c.field-meta.xml
<CustomField>
    <fullName>Tiny_URL__c</fullName>
    <label>Tiny URL</label>
    <type>Url</type>
</CustomField>