force-app/main/default/objects/Payment_transaction__c/fields/tracking_id__c.field-meta.xml
<CustomField>
    <fullName>tracking_id__c</fullName>
    <label>Tracking ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>