force-app/main/default/objects/Payment_transaction__c/fields/trans_date__c.field-meta.xml
<CustomField>
    <fullName>trans_date__c</fullName>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>