force-app/main/default/objects/Payment_transaction__c/fields/vault__c.field-meta.xml
<CustomField>
    <fullName>vault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vault</label>
    <type>Checkbox</type>
</CustomField>